<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment" >


    <EditText
        android:id="@+id/editHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/userHeight"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/height_set"
        app:layout_constraintTop_toBottomOf="@+id/height_set" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/userWeight"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editHeight"
        app:layout_constraintStart_toStartOf="@+id/weight_set"
        app:layout_constraintTop_toBottomOf="@+id/weight_set" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/height_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_height"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/editHeight"
        app:layout_constraintTop_toBottomOf="@+id/editHeight" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:max="2500"
        android:progress="0"
        app:layout_constraintStart_toStartOf="@+id/daily_goal"
        app:layout_constraintTop_toBottomOf="@+id/daily_goal" />

    <TextView
        android:id="@+id/daily_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/daily_goal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/editWeight"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <TextView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/editWeight"
        app:layout_constraintTop_toBottomOf="@+id/daily_goal" />

</androidx.constraintlayout.widget.ConstraintLayout>